--- a/package.json
+++ b/package.json
@@ -1,19 +1,19 @@
 {
-   "name": "suhail-md",
+   "name": "sir ★Manexx★",
    "version": "1.3.5",
-   "description": "Multi device whatsapp bot.",
+   "description": "Multi device whatsapp bot created by Manexx.",
    "main": "index.js",
    "type": "commonjs",  
    "scripts": {
             "run": "pm2 start . --deep-monitoring --attach --name Suhail || node .",
             "suhail": "pm2 start . --deep-monitoring --attach --name Suhail || node .",
             "start": "pm2 start . --attach --name Suhail",
-            "stop": "pm2 stop Suhail",
+            "stop": "pm2 stop Manexx",
             "old-heroku-postbuild": "git clone https://github.com/SuhailTechInfo/Suhail-Md.git temp && mv temp/.git .git && rm -rf temp && npx puppeteer@latest install  --y",
             "fis-heroku-postbuild": "git clone https://github.com/SuhailTechInfo/Suhail-Md.git temp1 && rsync -av temp1/* ./ && rsync -av temp1/.* ./ && rm -rf temp1 && npm i && npx puppeteer@latest install",
             "postinstall": "npx puppeteer@latest install --y"
    },
-   "author": "SuhailTechInfo",
+   "author": "manexxTechInfo",
    "license" :"Apache-2.0",
    "dependencies": {
              "@adiwajshing/keyed-db": "^0.2.4",
@@ -77,5 +77,5 @@
       "url": "git+https://github.com/SuhailTechInfo/Suhail-Md.git"
    },
    "bugs": { "url": "https://github.com/SuhailTechInfo/Suhail-Md/issues" },
-   "homepage": "https://github.com/SuhailTechInfo/Suhail-Md#readme"
+   "homepage": ".https://chat.whatsapp.com/HfDrgRKpcWMHf0rJmWY4DL"
 }
