--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-   "name": "suhail-md",
-   "version": "1.3.6",
+   "name": "official_ky",
+   "version": "4.71.10",
    "description": "Multi device whatsapp bot.",
    "main": "index.js",
    "type": "commonjs",  
